# django_project

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
mysite/: asgi.py  settings.py  urls.py  wsgi.py
shopapp/: admin.py  forms.py  models.py  urls.py  views.py
shopapp/management/commands/: create_order.py
shopapp/migrations/: 0001_initial.py
shopapp/templates/shopapp/: order_detail.html  order_list.html
