[project]
name = "deploy-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Reviva1w",email = "ilysplay@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "django (>=6.0.6,<7.0.0)",
    "djangorestframework (>=3.17.1,<4.0.0)",
    "django-filter (>=25.2,<26.0)",
    "pillow (>=12.2.0,<13.0.0)",
    "gunicorn (>=26.0.0,<27.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
